--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #634cec;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.browser{
+  display: flex;
+  flex-direction: column;
+  background-color: #ffb91f;
+  border-radius: 5px;
+  min-width: 60%;
+  min-height: 50vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tabs{
+  flex-shrink: 1;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+  padding-top: 10px;
 }
+
+.tab{
+  position: relative;
+  background: #6345df;
+  min-width: 120px;
+  font-size: 15px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+
+}
+
+.tab a {
+  display: block;
+  text-decoration: none;
+  padding: 12px 25px;
+  color: aliceblue;
+
+}
+.viewport{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #5131e9;
+  color: aliceblue;
+  flex: 1;
+  flex-grow: 1;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
